<resources>

    <string name="action_settings">Settings</string>

    <!-- Back stack values -->
    <string name="pref_notif_msg_backstack_enable_key">pref_notif_msg_backstack_enable_key</string>
    <string name="pref_notif_msg_backstack_with_parent_enable_key">pref_notif_msg_backstack_with_parent_enable_key</string>
    <string name="pref_notif_msg_backstack_amount_key">pref_notif_msg_backstack_amount_key</string>
    <string name="pref_notif_msg_backstack_handle_url_key">pref_notif_msg_backstack_handle_url_key</string>

    <string name="pref_notif_button1_backstack_enable_key">pref_notif_button1_backstack_enable_key</string>
    <string name="pref_notif_button1_backstack_with_parent_enable_key">pref_notif_button1_backstack_with_parent_enable_key</string>
    <string name="pref_notif_button1_backstack_amount_key">pref_notif_button1_backstack_amount_key</string>
    <string name="pref_notif_button1_backstack_handle_url_key">pref_notif_button1_backstack_handle_url_key</string>

    <string name="pref_notif_button2_backstack_enable_key">pref_notif_button2_backstack_enable_key</string>
    <string name="pref_notif_button2_backstack_with_parent_enable_key">pref_notif_button2_backstack_with_parent_enable_key</string>
    <string name="pref_notif_button2_backstack_amount_key">pref_notif_button2_backstack_amount_key</string>
    <string name="pref_notif_button2_backstack_handle_url_key">pref_notif_button2_backstack_handle_url_key</string>

    <string name="pref_notif_backstack_enable_title">Back stack</string>
    <string name="pref_notif_backstack_with_parent_enable_title">With parent stack</string>
    <string name="pref_notif_backstack_amount_title">Amount of back stack activities</string>
    <string name="pref_notif_backstack_handle_url_title">Handle a rich push url</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Firebase Auth -->
    <string name="sign_in">Sing In</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="delete_account_label">Delete account</string>
    <string name="user_profile_header">User profile:</string>
    <string name="profile_picture_content_desc">Profile picture</string>
    <string name="idp_token">IDP Token</string>
    <string name="idp_secret">IDP Secret</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="btn_next">Next</string>
    <string name="btn_verify_email">Verify Email</string>
    <string name="btn_check">Check</string>

    <!-- Accengage Inbox -->
    <string name="nav_inbox_primary">Primary</string>
    <string name="nav_inbox_archive">Archive</string>
    <string name="nav_inbox_expired">Expired</string>
    <string name="nav_inbox_trash">Trash</string>

    <string name="nav_inbox_categories">Categories</string>

    <string name="action_inbox_delete">Delete</string>
    <string name="action_inbox_archive">Archive</string>
    <string name="action_inbox_more">More</string>

</resources>
